<resources>
    <string name="app_name">Kantin Barokah</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_logout">Logout</string>
    <string name="title_upload">Upload</string>
    <string name="search">Search</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_text">1</string>
    <string name="btn_select">select</string>
    <string name="btn_select_text">.jpg/.png</string>
    <string name="img_upload">Image Upload</string>
</resources>
