<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="672dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignTop="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-24dp"
            android:background="@color/design_default_color_primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="369dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:drawableStart="@drawable/back_icon"
            android:text="@string/app_name"
            android:textColor="@color/colortext"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <ImageView
            android:id="@+id/img_upload"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_below="@+id/view"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-8dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="267dp"
            android:layout_marginBottom="399dp"
            android:contentDescription="@string/img_upload"
            android:src="@drawable/ic_circle_upload" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_below="@+id/view"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="447dp"
            android:text="@string/btn_select" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="38dp"
            android:layout_below="@+id/view"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="444dp"
            android:text="@string/btn_select_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="321dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Nama Menu" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="246dp"
            android:ems="10"
            android:inputType="number"
            android:hint="Harga" />

        <Button
            android:id="@+id/button"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="114dp"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="169dp"
            android:text="Upload" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="212dp"
            android:layout_height="54dp"
            android:layout_below="@+id/view"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="92dp"
            android:layout_marginBottom="537dp"
            android:text="UPLOAD MENU"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="30sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>