<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="900dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="50dp"
    android:layout_below="@id/view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="5"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colortext">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="83dp"
                android:padding="1pt"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_circle"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_plus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/btn_text"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_marginTop="50dp"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_minus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="5"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colortext">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="83dp"
                android:padding="1pt"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_circle"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_plus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/btn_text"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_marginTop="50dp"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_minus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="5"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colortext">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="83dp"
                android:padding="1pt"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_circle"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_plus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/btn_text"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_marginTop="50dp"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_minus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="5"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colortext">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="83dp"
                android:padding="1pt"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_circle"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_plus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/btn_text"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_marginTop="50dp"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_minus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="5"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colortext">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="83dp"
                android:padding="1pt"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_circle"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_plus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/btn_text"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_marginTop="50dp"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_minus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="5"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colortext">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="83dp"
                android:padding="1pt"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_circle"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_plus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/btn_text"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_marginTop="50dp"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_minus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="5"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colortext">
            <ImageView
                android:layout_width="95dp"
                android:layout_height="83dp"
                android:padding="1pt"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_circle"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"/>
            <View
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:padding="1pt"
                android:background="#dfdfdf"
                android:layout_marginStart="95dp"
                android:layout_marginTop="50dp"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_plus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/btn_text"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_marginTop="50dp"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:text="@string/btn_minus"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
